feat: update broker url

--- a/action.yml
+++ b/action.yml
@@ -9,11 +9,10 @@ inputs:
     description: The token of the action containing the service to use to login as
     required: true
   broker_url:
-    default: https://nr-broker.apps.silver.devops.gov.bc.ca
+    default: https://broker.io.nrs.gov.bc.ca
     description: The broker url.
   role_id:
     description: The service's application role id in vault. Setting this is recommended to avoid environment mismatch.
-    required: true
   vault_url:
     default: https://knox.io.nrs.gov.bc.ca
     description: The vault url.
